# react-wasm-chess

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts
mocks/: browser.ts  handlers.ts  server.ts
src/: App.tsx  chess.rs  global.css  lib.rs  main.tsx
src/components/: Chessground.tsx
src/utils/: chess.spec.ts  chess.ts
src/wasm/: Cargo.toml
src/wasm/src/: chess.rs  lib.rs  utils.rs
src/wasm/tests/: chess_tests.rs
tests/: chess_tests.rs
