[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

wasm-bindgen = "0.2.95"
humantime = "2"
itertools = "0.13.0"
web-sys = { version = "0.3.50", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "MessageEvent",
  "Worker",
  "Performance",
  "PerformanceTiming",
] }
gloo-timers = "0.3.0"
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
